--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-day-picker": "9.8.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-pdf": "^10.3.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.7.0",
     "recharts": "2.15.4",
